--- a/portfolio/portfolio1/index.html
+++ b/portfolio/portfolio1/index.html
@@ -114,6 +114,18 @@
       font-weight: bold;
       color: #38bdf8;
     }
+
+    /* Sections */
+    section {
+      padding: 70px 50px;
+      text-align: center;
+    }
+
+    section h2 {
+      font-size: 32px;
+      margin-bottom: 20px;
+      color: #38bdf8;
+    }
     </style>
 </head>
 <body>
