--- a/portfolio/portfolio1/index.html
+++ b/portfolio/portfolio1/index.html
@@ -126,6 +126,16 @@
       margin-bottom: 20px;
       color: #38bdf8;
     }
+
+     /* Skills */
+    .skills-box {
+      display: flex;
+      justify-content: center;
+      flex-wrap: wrap;
+      gap: 15px;
+      margin-top: 30px;
+    }
+
     </style>
 </head>
 <body>
