--- a/portfolio/portfolio1/index.html
+++ b/portfolio/portfolio1/index.html
@@ -136,6 +136,13 @@
       margin-top: 30px;
     }
 
+    .skill {
+      background: #1e293b;
+      padding: 12px 25px;
+      border-radius: 8px;
+      border: 1px solid #38bdf8;
+    }
+
     </style>
 </head>
 <body>
