--- a/portfolio/portfolio1/index.html
+++ b/portfolio/portfolio1/index.html
@@ -143,6 +143,15 @@
       border: 1px solid #38bdf8;
     }
 
+     /* Projects */
+    .project-cards {
+      display: flex;
+      justify-content: center;
+      flex-wrap: wrap;
+      gap: 20px;
+      margin-top: 30px;
+    }
+
     </style>
 </head>
 <body>
