--- a/portfolio/portfolio1/index.html
+++ b/portfolio/portfolio1/index.html
@@ -152,6 +152,16 @@
       margin-top: 30px;
     }
 
+    .card {
+      background: #1e293b;
+      padding: 25px;
+      width: 280px;
+      border-radius: 12px;
+      text-align: left;
+      border: 1px solid transparent;
+      transition: 0.3s;
+    }
+
     </style>
 </head>
 <body>
