--- a/portfolio/portfolio1/index.html
+++ b/portfolio/portfolio1/index.html
@@ -162,6 +162,16 @@
       transition: 0.3s;
     }
 
+    .card:hover {
+      border: 1px solid #38bdf8;
+      transform: translateY(-5px);
+    }
+
+    .card h3 {
+      margin-bottom: 10px;
+      color: #fff;
+    }
+
     </style>
 </head>
 <body>
