--- a/portfolio/portfolio1/index.html
+++ b/portfolio/portfolio1/index.html
@@ -214,6 +214,21 @@
       who loves creating clean and responsive websites.
     </p>
   </section>
+
+  
+  <!-- Skills Section -->
+  <section class="skills" id="skills">
+    <h2>Skills</h2>
+
+    <div class="skills-box">
+      <div class="skill">HTML</div>
+      <div class="skill">CSS</div>
+      <div class="skill">JavaScript</div>
+      <div class="skill">C / C++</div>
+      <div class="skill">Python</div>
+      <div class="skill">SQL</div>
+    </div>
+  </section>
  
 </body>
 </html>
