--- a/portfolio/portfolio1/index.html
+++ b/portfolio/portfolio1/index.html
@@ -229,6 +229,19 @@
       <div class="skill">SQL</div>
     </div>
   </section>
+
+   <!-- Projects Section -->
+  <section class="projects" id="projects">
+    <h2>Projects</h2>
+
+    <div class="project-cards">
+
+      <div class="card">
+        <h3>Project 1</h3>
+        <p>Short description of your project.</p>
+        <a href="#">View</a>
+      </div>
+
  
 </body>
 </html>
