--- a/portfolio/portfolio1/index.html
+++ b/portfolio/portfolio1/index.html
@@ -242,6 +242,18 @@
         <a href="#">View</a>
       </div>
 
+      <div class="card">
+        <h3>Project 2</h3>
+        <p>Short description of your project.</p>
+        <a href="#">View</a>
+      </div>
+
+      <div class="card">
+        <h3>Project 3</h3>
+        <p>Short description of your project.</p>
+        <a href="#">View</a>
+      </div>
+
  
 </body>
 </html>
