--- a/portfolio/portfolio1/index.html
+++ b/portfolio/portfolio1/index.html
@@ -254,6 +254,21 @@
         <a href="#">View</a>
       </div>
 
+       </div>
+  </section>
+
+  <!-- Contact Section -->
+  <section class="contact" id="contact">
+    <h2>Contact Me</h2>
+
+    <form class="contact-form">
+      <input type="text" placeholder="Your Name" required />
+      <input type="email" placeholder="Your Email" required />
+      <textarea placeholder="Your Message" required></textarea>
+      <button type="submit">Send Message</button>
+    </form>
+  </section>
+
  
 </body>
 </html>
