--- a/portfolio/portfolio1/index.html
+++ b/portfolio/portfolio1/index.html
@@ -172,6 +172,37 @@
       color: #fff;
     }
 
+    
+    .card p {
+      color: #cbd5e1;
+      margin-bottom: 15px;
+    }
+
+    .card a {
+      color: #38bdf8;
+      text-decoration: none;
+      font-weight: bold;
+    }
+
+     /* Contact */
+    .contact-form {
+      max-width: 500px;
+      margin: auto;
+      display: flex;
+      flex-direction: column;
+      gap: 15px;
+    }
+
+    .contact-form input,
+    .contact-form textarea {
+      padding: 12px;
+      border-radius: 8px;
+      border: none;
+      outline: none;
+      background: #1e293b;
+      color: white;
+    }
+
     </style>
 </head>
 <body>
