--- a/portfolio/portfolio1/index.html
+++ b/portfolio/portfolio1/index.html
@@ -203,6 +203,25 @@
       color: white;
     }
 
+     .contact-form textarea {
+      height: 120px;
+      resize: none;
+    }
+
+    .contact-form button {
+      background: #38bdf8;
+      color: #0f172a;
+      padding: 12px;
+      border: none;
+      border-radius: 8px;
+      font-weight: bold;
+      cursor: pointer;
+    }
+
+    .contact-form button:hover {
+      opacity: 0.9;
+    }
+
     </style>
 </head>
 <body>
