--- a/portfolio/portfolio1/index.html
+++ b/portfolio/portfolio1/index.html
@@ -222,6 +222,14 @@
       opacity: 0.9;
     }
 
+     /* Footer */
+    .footer {
+      background: #111827;
+      padding: 20px;
+      text-align: center;
+      color: #cbd5e1;
+    }
+
     </style>
 </head>
 <body>
