--- a/portfolio/portfolio1/index.html
+++ b/portfolio/portfolio1/index.html
@@ -230,6 +230,20 @@
       color: #cbd5e1;
     }
 
+     /* ✅ Responsive */
+    @media (max-width: 768px) {
+      .navbar {
+        padding: 15px 20px;
+        flex-direction: column;
+        gap: 10px;
+      }
+
+      .hero {
+        flex-direction: column;
+        text-align: center;
+      }
+    }
+
     </style>
 </head>
 <body>
