--- a/HTML/js1/index.html
+++ b/HTML/js1/index.html
@@ -10,7 +10,7 @@
             padding: 0;
         }
         canvas{
-            background-color: aquamarine;
+            background-color: rgb(0, 0, 0);
         }
     </style>
 </head>
