--- a/portfolio/portfolio1/index.html
+++ b/portfolio/portfolio1/index.html
@@ -10,7 +10,12 @@
       margin: 0;
       padding: 0;
     }
-    
+    body{
+      background-color: rgb(21, 21, 53);
+      color: white;
+    }
+
+
   </style>
 </head>
 <body>
