--- a/portfolio/portfolio1/index.html
+++ b/portfolio/portfolio1/index.html
@@ -21,7 +21,16 @@
 <body>
   <header>
     <nav>
-
+      <div class="left">MyPortfolio</div>
+      <div class="right">
+        <ul>
+          <li>Home</li>
+          <li>About</li>
+          <li>Skills</li>
+          <li>Projects</li>
+          <li>Contact</li>
+        </ul>
+      </div>
     </nav>
   </header>
   
